--- a/package.json
+++ b/package.json
@@ -27,15 +27,29 @@
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "devDependencies": {
+    "@types/less": "^3.0.3",
     "@types/node": "^18.7.23",
+    "@types/stylus": "^0.48.38",
     "esbuild": "^0.15.10",
     "jest": "^29.1.2",
+    "less": "^4.1.3",
+    "postcss": "^8.4.17",
+    "postcss-modules": "^5.0.0",
     "rollup": "^2.79.1",
+    "sass": "^1.55.0",
+    "stylus": "^0.59.0",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "esbuild": "^0.15.10",
     "rollup": "^2.79.1"
+  },
+  "optionalDependencies": {
+    "less": "^4.1.3",
+    "postcss": "^8.4.17",
+    "postcss-modules": "^5.0.0",
+    "sass": "^1.55.0",
+    "stylus": "^0.59.0"
   },
   "sideEffects": false,
   "scripts": {
