--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^14.1.0",
     "@types/less": "^3.0.3",
     "@types/node": "^18.7.23",
     "@types/stylus": "^0.48.38",
@@ -36,6 +37,7 @@
     "postcss": "^8.4.17",
     "postcss-modules": "^5.0.0",
     "rollup": "^2.79.1",
+    "rollup-plugin-esbuild-resolve": "^1.0.1",
     "sass": "^1.55.0",
     "stylus": "^0.59.0",
     "typescript": "^4.8.4"
